--- a/BlogClient/app/src/main/res/menu/menu.xml
+++ b/BlogClient/app/src/main/res/menu/menu.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <item
         android:id="@+id/menu_login"
         android:title="@string/login"
-        app:showAsAction="always"
+        app:showAsAction="never"
         android:orderInCategory="100"
         />
 </menu>
