--- a/BlogClient/app/src/main/res/menu/menu.xml
+++ b/BlogClient/app/src/main/res/menu/menu.xml
@@ -6,7 +6,14 @@
     <item
         android:id="@+id/menu_login"
         android:title="@string/login"
-        app:showAsAction="never"
+        app:showAsAction="ifRoom"
+        android:orderInCategory="100"
+        />
+
+    <item
+        android:id="@+id/menu_test"
+        android:title="@string/test"
+        app:showAsAction="ifRoom"
         android:orderInCategory="100"
         />
 </menu>
