--- a/BlogClient/app/src/main/res/menu/activity_home_drawer.xml
+++ b/BlogClient/app/src/main/res/menu/activity_home_drawer.xml
@@ -5,11 +5,11 @@
         <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="@string/homepage" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="@string/myhome" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
