--- a/BlogClient/app/src/main/res/layout/item_home.xml
+++ b/BlogClient/app/src/main/res/layout/item_home.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="@dimen/item_height">
 
     <ImageView
-
+        android:scaleType="centerCrop"
         android:id="@+id/img_blog_bg"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
