--- a/BlogClient/app/src/main/res/menu/activity_home_drawer.xml
+++ b/BlogClient/app/src/main/res/menu/activity_home_drawer.xml
@@ -3,11 +3,11 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_public"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/homepage" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_my_blog"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/myhome" />
         <item
