集成网易云信接口，按照chatTest集成了登录/注册功能

--- a/BlogClient/app/src/main/res/layout/activity_login.xml
+++ b/BlogClient/app/src/main/res/layout/activity_login.xml
@@ -64,6 +64,13 @@
                 android:text="@string/action_sign_in"
                 android:textStyle="bold" />
 
+            <Button
+                android:text="registered"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/btn_to_registered"
+                />
+
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
