--- a/BlogClient/app/src/main/res/layout/activity_details.xml
+++ b/BlogClient/app/src/main/res/layout/activity_details.xml
@@ -20,6 +20,18 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
+                android:id="@+id/iv_user_icon"
+                />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/iv_blog_img"
+                />
+
             <TextView
                 android:id="@+id/tv_details_title"
                 android:layout_width="match_parent"
