--- a/BlogClient/app/src/main/res/layout/nav_header_home.xml
+++ b/BlogClient/app/src/main/res/layout/nav_header_home.xml
@@ -6,6 +6,7 @@
 
     <ImageView
         android:id="@+id/img_bg"
+        android:scaleType="centerCrop"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/side_nav_bar" />
