--- a/BlogClient/app/src/main/res/layout/item_home.xml
+++ b/BlogClient/app/src/main/res/layout/item_home.xml
@@ -1,40 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/item_height">
+    android:layout_height="@dimen/item_height"
+    android:layout_marginBottom="8dp"
+    card_view:cardCornerRadius="4dp">
 
-    <ImageView
-        android:scaleType="centerCrop"
-        android:id="@+id/img_blog_bg"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="@dimen/space_s">
-
-
-        <TextView
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:paddingTop="@dimen/space_s"
-            android:id="@+id/tv_title"
+        <ImageView
+            android:id="@+id/img_blog_bg"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
 
-        <TextView
-            android:paddingTop="@dimen/space_s"
-            android:id="@+id/tv_author"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:background="@color/bg"
+            android:padding="@dimen/space_s">
 
-        <TextView
-            android:paddingTop="@dimen/space_s"
-            android:id="@+id/tv_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
-    </LinearLayout>
-</FrameLayout>
+            <TextView
+                android:textSize="@dimen/txt_m"
+                android:layout_alignParentTop="true"
+                android:textColor="@color/item_tv_color"
+                android:id="@+id/tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+            <TextView
+                android:layout_above="@+id/tv_date"
+                android:textColor="@color/item_tv_color"
+                android:id="@+id/tv_author"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/space_s" />
+
+            <TextView
+                android:layout_alignParentBottom="true"
+                android:textColor="@color/item_tv_color"
+                android:id="@+id/tv_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/space_s"
+               />
+
+        </RelativeLayout>
+    </FrameLayout>
+</android.support.v7.widget.CardView>
