--- a/BlogClient/app/src/main/res/menu/activity_home_drawer.xml
+++ b/BlogClient/app/src/main/res/menu/activity_home_drawer.xml
@@ -11,9 +11,9 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/myhome" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_recent"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="@string/recent" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
