--- a/BlogClient/app/src/main/res/layout/content_details2.xml
+++ b/BlogClient/app/src/main/res/layout/content_details2.xml
@@ -8,10 +8,18 @@
     tools:context="com.uncle.egg.blogclient.activity.UserDetailActivity"
     tools:showIn="@layout/activity_user_details2">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+    <LinearLayout
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rcv_user"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
 
 </android.support.v4.widget.NestedScrollView>
