--- a/BlogClient/app/src/main/res/layout/item_message.xml
+++ b/BlogClient/app/src/main/res/layout/item_message.xml
@@ -2,26 +2,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_icon"
         android:layout_width="@dimen/icon_size"
         android:layout_height="@dimen/icon_size" />
 
-    <TextView
-        android:id="@+id/tv_user_name"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        >
+        <TextView
+            android:layout_margin="@dimen/space_s"
+            android:textSize="@dimen/txt_m"
+            android:id="@+id/tv_user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/tv_user_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:layout_margin="@dimen/space_s"
+            android:layout_toRightOf="@id/tv_user_name"
+            android:layout_alignBottom="@id/tv_user_name"
+            android:layout_alignParentRight="true"
+            android:gravity="right"
+            android:id="@+id/tv_user_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/tv_notify"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:layout_margin="@dimen/space_s"
+            android:layout_below="@id/tv_user_name"
+            android:id="@+id/tv_message_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_margin="@dimen/space_s"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/tv_notify"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
+
+
 
 </LinearLayout>
